Fixed gap

--- a/src/components/Notification/Notification.css
+++ b/src/components/Notification/Notification.css
@@ -1,7 +1,7 @@
 /* Notification.css */
 .notification-container {
     position: fixed;
-    top: 50px;
+    top: 40px;
     right: 20px;
     display: flex;
     flex-direction: column;
